# SalePricePredictor

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.claude/agents/: ml-engineer.md
.github/workflows/: ci.yml  docs.yml
config/: config.yaml
config/experiment/: experiment.yaml  experiment_with_feature_engineering.yaml  presentation.yaml
config/preprocessing/: default.yaml
docs/: mkdocs.yml
docs/docs/: index.md  protocol.md
docs/docs/presentation/: 01-problem.md  02-solution.md  03-demo.md  03-results.md  04-results.md  05-qa.md  FOR-ML-ENGINEER.md  FOR-PRODUCT-OWNER.md  FOR-SENIOR-DEV.md  README.md  REALISTIC-TIMING.md
notebooks/: baseline.ipynb  data.ipynb  first_read.py  interim_data.ipynb  raw_data.ipynb
scripts/: eda.py
scripts/experiments/: baseline.py  iterative_preprocessing.py
scripts/experiments/utils/: model.py
src/: cli.py  config.py  main.py
src/adapters/: command.py  experiment_manager.py  factory.py  filesystem_repository.py  load.py  model_export.py  simple_experiment.py
src/application/: experiment_runner.py
src/config/: hydra_loader.py  paths.py
src/domain/models/: experiment_models.py
src/domain/ports/: data_repository.py  experiment.py  experiment_manager_port.py
src/experiments/: baseline.py  iterative_preprocessing.py
src/preprocessing/: feature_engineering.py  feature_selection.py  pipeline.py  pipeline_builder.py  preprocess.py  sklearn_pipeline_builder.py
src/presentation/: progression.py  streamlit_app.py
src/services/: experiment_manager.py  simple_experiment.py
src/utils/: mlflow_setup.py  settings.py
tests/: conftest.py  test_pipeline_builder.py
tests/config/: config.yaml  default.yaml  experiment.yaml
tests/integration/: test_experiment_workflow.py  test_feature_pipeline.py
tests/unit/: test_config_parser.py  test_data_repository_factory.py  test_experiment_models.py  test_experiment_runner.py  test_feature_engineering.py  test_feature_selection.py  test_filesystem_repository.py  test_paths.py  test_sklearn_pipeline_builder.py
