[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "predict house sale prices"
authors = [
    { name = "Robert Mei\u00dfner" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "bandit>=1.7.5",
    "hydra-core>=1.3.0",
    "loguru",
    "mkdocs",
    "mkdocs-material>=9.0.0",
    "mlflow>=3.4.0",
    "myapplication>=0.1.0",
    "mypy>=1.0.0",
    "notebook>=7.4.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pip",
    "plotly>=6.3.1",
    "polars>=1.34.0",
    "pre-commit>=4.3.0",
    "pytest",
    "pytest-cov>=4.0.0",
    "python-dotenv",
    "ruff",
    "safety>=2.0.0",
    "scikit-learn>=1.7.2",
    "tqdm",
    "typer",
]
requires-python = "~=3.12.0"

[project.scripts]
salepricepredictor = "src.cli:app"

[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

[dependency-groups]
dev = [
    "statsmodels>=0.14.5",
    "streamlit>=1.50.0",
]

[tool.isort]
profile = "black"
src_paths = ["src", "test"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "def __repr__", "raise NotImplementedError", "if __name__ == .__main__."]
omit = ["src/cli.py", "src/presentation/*", "src/utils/mlflow_setup.py"]
fail_under = 70

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B101"]
